--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 !.yarn/releases
 !.yarn/versions
 
+# lockfiles (keep one authoritative, others can be ignored if not in use)
+pnpm-lock.yaml
+yarn.lock
+
 # testing
 /coverage
 
@@ -23,6 +27,9 @@
 # misc
 .DS_Store
 *.pem
+*.swp
+*.swo
+Thumbs.db
 
 # debug
 npm-debug.log*
@@ -32,6 +39,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +50,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# build artifacts
+dist/
